# miranda-icq

./: README.md  miranda.dsw  miranda.ncb  miranda.opt
beicons/: BEIcons.dsp  beicons.aps  beicons.cpp  beicons.plg  beicons.rc  resource.h  stdafx.cpp
doc/doc/: index.htm
doc/plugin doc/: miranda icq plugin development.doc
icqlib/: acconfig.h  acinclude.m4  aclocal.m4  authors  chatsession.c  chatsession.h  config.h.in  configure  configure.in  contacts.c  contacts.h  cyrillic.c  devel  filesession.c  filesession.h  icq.h  icq.h.in  icqbyteorder.c  icqbyteorder.h  icqlib.c  icqlib.dsp  icqlib.h  icqlib.plg  icqlib.spec  icqlib.spec.in  icqpacket.c  icqpacket.h  icqtypes.h  list.c  list.h  makefile.am  makefile.in  mkinstalldirs  proxy.c  queue.c  queue.h  readme  readme.win32  stdpackets.c  stdpackets.h  (+13 more)
miranda32/: encrypt.c  encryption.h  global.h  icqdll.h  icqlib32.exp  icqlib32.lib  import.c  import.h  megahal.brn  miranda.c  miranda32.dsp  miranda32.dsw  miranda32.ncb  miranda32.opt  miranda32.plg  msgque.c  msgque.h  options.c  pluginapi.h  plugins.c  plugins.h  rca00752  resource.aps  resource.h  resource.rc
