# -*- autoconf -*-
AC_INIT(acinclude.m4)
AM_INIT_AUTOMAKE(icqlib, `cat VERSION`)
AM_CONFIG_HEADER(config.h)
AC_CHECK_COMPILERS
AC_CHECK_HEADERS(asm/byteorder.h byteswap.h endian.h machine/endian.h arpa/nameser_compat.h)
AC_CHECK_FUNCS(bswap_32 bswap_16)
AM_PROG_LIBTOOL
#AM_SET_LIBTOOL_VARIABLE([--silent])
LIBTOOL="$LIBTOOL --silent"
ICQLIB_OPTBSWAP
ICQLIB_VERSION
AC_OUTPUT(Makefile icqlib.spec icqlib/Makefile icqlib/icq.h)
